--- a/people.htm
+++ b/people.htm
@@ -248,7 +248,15 @@ Audrey Putelo is a first-year PhD student in the Biomedical Sciences (BIMS) prog
 Email: <a href="mailto:jev4xy@virginia.edu">jev4xy@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Jose Verdezoto is a first-year PhD student in the Biomedical Sciences (BIMS) program doing rotation in the lab. Originally from Quito, Ecuador, he received his BS in Molecular biology and Genetics from the University of Washington, Seattle. After graduation, he worked at the Fred Hutchinson Cancer Research Center for a couple of years investigating the role of nuclear lipid droplets in germline development. In order to start training in computational biology, he moved to Charlottesville and joined the lab of Dr. Nathan Sheffield at the UVA Center for Public Health Genomics. He mostly worked on developing software architecture for hosting of genomic region data as well as analysis of single cell RNA-seq data. During his graduate career, he hopes to study different ways to integrate different types of high-throughput genomics data to understand disease in a more holistic way. During his free time he loves to play/watch tennis, learn about finance and stocks trading, and watch comedy TV shows.
-</p>
+</p><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/jamel_simpson.jpg" style="width:180px">
+<b>Jamel Simpson</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:jws6pq@virginia.edu">jws6pq@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Jamel Simpson is a first year Ph.D. student in the Biomedical Sciences (BIMS) program doing rotation in the lab. He received his B.S. in Biochemistry from UCLA. He started research in cell biology working with actin nucleator Spire, but has recently pivoted to creating computational tools to uncover the complexity of genetic disease.
+</p><br><br>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
 <h4><font color="#002F6C">Class of 2021</font></h4>
@@ -535,7 +543,7 @@ Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on 
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: November 25, 2020</p>
+<p align="right">Last modified: December 14, 2020</p>
 
 </div>
 
