--- a/publication.htm
+++ b/publication.htm
@@ -119,6 +119,11 @@ function myFunction() {
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2020.12.17.423327v1" target="_blank">BART Cancer: a web resource for transcriptional regulators in cancer genomes</a><br> 
+<u>Zachary V. Thomas</u>, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>
+<br>
+<b>bioRxiv</b> 2020.12.17.423327 (2020)
+</p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2020.08.19.258095v1" target="_blank">BART3D: Inferring transcriptional regulators associated with differential chromatin interactions from Hi-C data</a><br> 
 <u>Zhenjia Wang</u>, <u>Yifan Zhang</u>, <u>Chongzhi Zang</u>
 <br>
@@ -136,7 +141,8 @@ function myFunction() {
 <li><p><a href="https://doi.org/10.1186/s13059-020-02152-7" target="_blank">Cancer-specific CTCF binding facilitates oncogenic transcriptional dysregulation</a><br> 
 Celestia Fang*, <u>Zhenjia Wang</u>*, Cuijuan Han, Stephanie L. Safgren, Kathryn A. Helmin, Emmalee R. Adelman, Valentina Serafin, Giuseppe Basso, Kyle P. Eagen, Alexandre Gaspar-Maia, Maria E. Figueroa, Benjamin D. Singer, Aakrosh Ratan, Panagiotis Ntziachristos<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
-<i><b>Genome Biology</b></i> 21, 247 (2020)
+<i><b>Genome Biology</b></i> 21, 247 (2020)<br>
+[<a href="https://zanglab.github.io/data/cancerCTCF/" target="_blank">data resource</a>]
 </p></li>
 <li><p><a href="http://journal.hep.com.cn/qb/EN/article/downloadArticleFile.do?attachType=PDF&id=28359" target="_blank">RECOGNICER: A coarse-graining approach for identifying broad domains from ChIP-seq data</a><br>
 <u>Chongzhi Zang</u><sup>#</sup>, <u>Yiren Wang</u>, Weiqun Peng<sup>#</sup>
@@ -319,7 +325,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: November 25, 2020</p>
+<p align="right">Last modified: December 18, 2020</p>
 </div>
 
 </body></html>
