--- a/publication.htm
+++ b/publication.htm
@@ -142,7 +142,7 @@ function myFunction() {
 Celestia Fang*, <u>Zhenjia Wang</u>*, Cuijuan Han, Stephanie L. Safgren, Kathryn A. Helmin, Emmalee R. Adelman, Valentina Serafin, Giuseppe Basso, Kyle P. Eagen, Alexandre Gaspar-Maia, Maria E. Figueroa, Benjamin D. Singer, Aakrosh Ratan, Panagiotis Ntziachristos<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
 <i><b>Genome Biology</b></i> 21, 247 (2020)<br>
-[<a href="https://zanglab.github.io/data/cancerCTCF/" target="_blank">data resource</a>]
+[<a href="https://zanglab.github.io/data/cancerCTCF/" target="_blank">data release</a>]
 </p></li>
 <li><p><a href="http://journal.hep.com.cn/qb/EN/article/downloadArticleFile.do?attachType=PDF&id=28359" target="_blank">RECOGNICER: A coarse-graining approach for identifying broad domains from ChIP-seq data</a><br>
 <u>Chongzhi Zang</u><sup>#</sup>, <u>Yiren Wang</u>, Weiqun Peng<sup>#</sup>
