--- a/software.htm
+++ b/software.htm
@@ -135,12 +135,12 @@ ul.topnav li.icon {display: none;}
 <tr>
 <td style="width:120px; height:120px"><a href="bartcancer" target="_blank"><img src="images/bartcancer_logo.jpg" style="width:100px"></a></td>
 <td><p>
-<b><a href="bartcancer" target="_blank">BART Cancer</a></b>, a database resource for computationally predicted transcriptional regulator activities in 15 human cancers from The Cancer Genome Atlas (TCGA). [<a href="bartcancer" target="_blank">Web resource</a>] <!--[<a href="https://academic.oup.com/bioinformatics/advance-article-abstract/doi/10.1093/bioinformatics/bty194/4956015" target="_blank">Publication</a>] [<a href="http://faculty.virginia.edu/zanglab/bartweb" target="_blank">Web interface</a>]-->
+<b><a href="bartcancer" target="_blank">BART Cancer</a></b>, a database resource for computationally predicted transcriptional regulator activities in 15 human cancers from The Cancer Genome Atlas (TCGA). [<a href="bartcancer" target="_blank">Web resource</a>] [<a href="https://www.biorxiv.org/content/10.1101/2020.12.17.423327v1" target="_blank">Preprint</a>]
 </p></td>
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: November 25, 2020</p>
+<p align="right">Last modified: December 20, 2020</p>
 </div>
 
 </body></html>
