--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,20 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">January 2021</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Three new members join the lab: BIMS rotations student Jamel Simpson, postdoctoral associates Qingying Chen and Billy Lamberti! Welcome Jamel, Qingying, and Billy!
+		<br><br>
+		The journal <a href="http://journal.hep.com.cn/qb/EN/2095-4689/current.shtml" target="_blank"><i>Quantitative Biology</i></a> features Chongzhi's <a href="https://doi.org/10.1007/s40484-020-0225-2" target="_blank">recent publication</a> with a <a href="http://journal.hep.com.cn/qb/EN/2095-4689/current.shtml" target="_blank">cover image</a>.
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">October 2020</font>
 		</p>
 	</div>
@@ -150,6 +164,8 @@ function myFunction() {
 		Media reports about the lab's cancer CTCF research are released at <a href="https://news.virginia.edu/content/cancers-dangerous-renovations-our-chromosomes-revealed" target="_blank"><b>UVA Today</b></a> and local news <a href="https://www.cbs19news.com/story/42818985/uva-finds-how-cancer-gets-comfortable-in-our-own-bodies" target="_blank"><b>CBS19</b></a>!
 		<br><br>
 		Chongzhi receives a grant from Virginia Commonwealth Medical Research Board (CHRB)!
+		<br><br>
+		The lab welcomes BIMS rotation student Jose Verdezoto!
 		</p>
 	</div>
 </div>
@@ -593,7 +609,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: November 25, 2020</p>
+<p align="right">Last modified: January 7, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
