--- a/publication.htm
+++ b/publication.htm
@@ -138,6 +138,11 @@ function myFunction() {
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.nature.com/articles/s41375-020-01116-x" target="_blank">U2af1 is required for survival and function of hematopoietic stem/progenitor cells</a><br>
+Avik Dutta, Yue Yang, Bao T. Le, <u>Yifan Zhang</u>, Omar Abdel-Wahab, <u>Chongzhi Zang</u>, Golam Mohi
+<br>
+<i><b>Leukemia</b></i>, <a href="https://doi.org/10.1038/s41375-020-01116-x" target="_blank">doi:10.1038/s41375-020-01116-x</a> (2021)
+</p></li>
 <li><p><a href="https://doi.org/10.1186/s13059-020-02152-7" target="_blank">Cancer-specific CTCF binding facilitates oncogenic transcriptional dysregulation</a><br> 
 Celestia Fang*, <u>Zhenjia Wang</u>*, Cuijuan Han, Stephanie L. Safgren, Kathryn A. Helmin, Emmalee R. Adelman, Valentina Serafin, Giuseppe Basso, Kyle P. Eagen, Alexandre Gaspar-Maia, Maria E. Figueroa, Benjamin D. Singer, Aakrosh Ratan, Panagiotis Ntziachristos<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
@@ -325,7 +330,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: December 18, 2020</p>
+<p align="right">Last modified: January 7, 2021</p>
 </div>
 
 </body></html>
