--- a/publication.htm
+++ b/publication.htm
@@ -143,16 +143,17 @@ Avik Dutta, Yue Yang, Bao T. Le, <u>Yifan Zhang</u>, Omar Abdel-Wahab, <u>Chongz
 <br>
 <i><b>Leukemia</b></i>, <a href="https://doi.org/10.1038/s41375-020-01116-x" target="_blank">doi:10.1038/s41375-020-01116-x</a> (2021)
 </p></li>
+<li><p><a href="https://link.springer.com/article/10.1007%2Fs40484-020-0225-2" target="_blank">RECOGNICER: A coarse-graining approach for identifying broad domains from ChIP-seq data</a><br>
+<u>Chongzhi Zang</u><sup>#</sup>, <u>Yiren Wang</u>, Weiqun Peng<sup>#</sup>
+<br>
+<i><b>Quantitative Biology</b></i> 8, 359&ndash;368 (2020)<br>
+[<a href="http://journal.hep.com.cn/qb/EN/2095-4689/current.shtml" target="_blank">cover image</a>]
+</p></li>
 <li><p><a href="https://doi.org/10.1186/s13059-020-02152-7" target="_blank">Cancer-specific CTCF binding facilitates oncogenic transcriptional dysregulation</a><br> 
 Celestia Fang*, <u>Zhenjia Wang</u>*, Cuijuan Han, Stephanie L. Safgren, Kathryn A. Helmin, Emmalee R. Adelman, Valentina Serafin, Giuseppe Basso, Kyle P. Eagen, Alexandre Gaspar-Maia, Maria E. Figueroa, Benjamin D. Singer, Aakrosh Ratan, Panagiotis Ntziachristos<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
 <i><b>Genome Biology</b></i> 21, 247 (2020)<br>
 [<a href="https://zanglab.github.io/data/cancerCTCF/" target="_blank">data release</a>]
-</p></li>
-<li><p><a href="http://journal.hep.com.cn/qb/EN/article/downloadArticleFile.do?attachType=PDF&id=28359" target="_blank">RECOGNICER: A coarse-graining approach for identifying broad domains from ChIP-seq data</a><br>
-<u>Chongzhi Zang</u><sup>#</sup>, <u>Yiren Wang</u>, Weiqun Peng<sup>#</sup>
-<br>
-<i><b>Quantitative Biology</b></i>, <a href="https://doi.org/10.1007/s40484-020-0225-2" target="_blank">doi:10.1007/s40484-020-0225-2</a> (2020)
 </p></li>
 <li><p><a href="https://doi.org/10.1016/j.isci.2020.101518" target="_blank">Polyadenylation of histone H3.1 mRNA promotes cell transformation by displacing H3.3 from gene regulatory elements</a><br>
 Danqi Chen*, Qiao Yi Chen*, <u>Zhenjia Wang</u>*, Yusha Zhu, Thomas Kluz, <u>Wuwei Tan</u>, Jinquan Li, Feng Wu, Lei Fang, Xiaoru Zhang, <u>Rongquan He</u>, Steven Shen, Hong Sun, <u>Chongzhi Zang</u><sup>#</sup>, Chunyuan Jin<sup>#</sup>, Max Costa<sup>#</sup>
