--- a/people.htm
+++ b/people.htm
@@ -197,21 +197,19 @@ Chris is a General Surgery resident and a Research Fellow in the Department of S
 </p><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/qingying_chen.jpg" style="width:180px">
-<b>Qingying Chen</b></p>
+<b>Qingying Chen, PhD</b></p>
 <p style="line-height: 1.6;">
-<!--Email: <a href="mailto:chd5n@virginia.edu">chd5n@virginia.edu</a>-->
-(Starting January 2021)<br>
+Email: <a href="mailto:jkx9nz@virginia.edu">jkx9nz@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Qingying Chen will start her postdoctoral training in the lab in January 2021. She expects to complete her PhD in physics in December 2020 at the University of Tulsa. She received her B.S. in Applied Physics from Xi’an Jiaotong University in China. Her research focused on designing, simulating, and testing the interference filters for the phonic sensing, and developing coating techniques to functionalize the integrated sensing elements. She is interested in computational biology and excited to gain experience in bioinformatics research.
+Qingying Chen joined the lab as a postdoctoral research associate in January 2021. She received her PhD in physics from the University of Tulsa and her B.S. in Applied Physics from Xi’an Jiaotong University in China. Her research focused on designing, simulating, and testing the interference filters for the phonic sensing, and developing coating techniques to functionalize the integrated sensing elements. She is interested in computational biology and excited to gain experience in bioinformatics research.
 </p><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/billy_lamberti.jpg" style="height:180px">
-<b>William F. Lamberti</b></p>
+<b>William F. Lamberti, PhD</b></p>
 <p style="line-height: 1.6;">
-<!--Email: <a href="mailto:chd5n@virginia.edu">chd5n@virginia.edu</a>-->
-(Starting January 2021)<br>
+Email: <a href="mailto:william.f.lamberti@virginia.edu">william.f.lamberti@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-William Franz Lamberti received his B.A. in Mathematical Statistics from The College of New Jersey in 2015 and his M.S. in Statistical Science from George Mason University in 2017.  Before joining UVA, he is completing his PhD in Computational Sciences and Informatics with a specialization in Data Science from George Mason University as a Presidential Scholar.  His current research interests include image processing applications, shape analysis, and statistical and machine learning classification problems.  He is planning on incorporating skills in explainable machine learning and imaging to spatial genomics problems.
+William Franz Lamberti received his B.A. in Mathematical Statistics from The College of New Jersey in 2015 and his M.S. in Statistical Science from George Mason University in 2017.  Before joining UVA, he received his PhD in Computational Sciences and Informatics with a specialization in Data Science from George Mason University where he was a Presidential Scholar.  His current research interests include image processing applications, shape analysis, and statistical and machine learning classification problems.  He is planning on incorporating skills in explainable machine learning and imaging to spatial genomics problems.
 </p><br>
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
@@ -414,6 +412,15 @@ Sifan is an undergraduate student in the College of Arts and Sciences (Class of 
 Email: <a href="mailto:ahm5jj@virginia.edu">ahm5jj@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on double-majoring in Biochemistry and Biostatistics with a potential minor in Bioethics. He is interested in the development and application of data science in the medical field, especially how computational methods can be applied to observe multiple health factors such as social, genetic, etc. In his free time, he likes swimming, exploring Charlottesville’s music and food scene and being with friends. He is apart of the Club Swim at UVA, PHIDE (Co-ed Pre-Medical Fraternity) and Student Council.
+</p><br><br>
+<h4><font color="#002F6C">Class of 2024</font></h4>
+<p style="line-height: 1.6;">
+<img align="right" src="images/kamil_urbanowski.jpg" style="width:180px">
+<b>Kamil Urbanowski</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:ku2yb@virginia.edu">ku2yb@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Kamil Urbanowski is an undergraduate student (Class of 2024) from Northern Virginia majoring in Biomedical Engineering with a minor in Data Science. He is passionate about exploring the intersection between machine learning and biotechnology. More specifically, Kamil is interested in understanding genetics through an engineering lens. He hopes to attend graduate school and one day work on developing innovations in healthcare and beyond. In his leisure time, Kamil enjoys reading fiction books, playing basketball, traveling, and watching new movies. He is also a member of the Mechatronics and Robotics Society (MARS) at UVA.
 </p><br>
 <hr>
 <h3><font color="#002F6C">Lab Alumni</font></h3>
@@ -543,7 +550,7 @@ Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on 
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: December 14, 2020</p>
+<p align="right">Last modified: January 14, 2021</p>
 
 </div>
 
