--- a/people.htm
+++ b/people.htm
@@ -422,6 +422,14 @@ Email: <a href="mailto:ku2yb@virginia.edu">ku2yb@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Kamil Urbanowski is an undergraduate student (Class of 2024) from Northern Virginia majoring in Biomedical Engineering with a minor in Data Science. He is passionate about exploring the intersection between machine learning and biotechnology. More specifically, Kamil is interested in understanding genetics through an engineering lens. He hopes to attend graduate school and one day work on developing innovations in healthcare and beyond. In his leisure time, Kamil enjoys reading fiction books, playing basketball, traveling, and watching new movies. He is also a member of the Mechatronics and Robotics Society (MARS) at UVA.
 </p><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/sydney_saviano.jpg" style="width:180px">
+<b>Sydney Saviano</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:scs8kcb@virginia.edu">scs8kcb@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New York majoring in global public health or mathematics on the pre-med track. She is interested in seeing how data science and  biology can work hand in hand to further advance the medical field. In her free time, she volunteers through Madison House, and is a member of the club squash team and Woody-Cauthen association student council organization.
+</p><br>
 <hr>
 <h3><font color="#002F6C">Lab Alumni</font></h3>
 <h4><font color="#002F6C">Graduate Students</font></h4>
@@ -550,7 +558,7 @@ Kamil Urbanowski is an undergraduate student (Class of 2024) from Northern Virgi
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: January 14, 2021</p>
+<p align="right">Last modified: January 22, 2021</p>
 
 </div>
 
