--- a/position.htm
+++ b/position.htm
@@ -118,7 +118,7 @@ function myFunction() {
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
-Our lab is seeking to fill at least <b>two</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methodologies and designing integrative data science approaches to study chromatin epigenomics and gene regulation. Current ongoing projects include: multi-omics integration-based algorithm development for transcriptional regulation prediction; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; statistical and computational modeling of phase-separated transcriptional condensation; global epigenetic and transcriptional regulation in T-cell immunity and various human cancer systems, etc. More information on research directions and previous publications can be found at the <a href="http://faculty.virginia.edu/zanglab">lab website</a>.
+Our lab is seeking to fill <b>three</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methodologies and designing integrative data science approaches to study chromatin epigenomics and gene regulation. Current ongoing projects include: multi-omics integration-based algorithm development for transcriptional regulation prediction; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; statistical and computational modeling of phase-separated transcriptional condensation; global epigenetic and transcriptional regulation in T-cell immunity and various human cancer systems, etc. More information on research directions and previous publications can be found at the <a href="http://faculty.virginia.edu/zanglab">lab website</a>.
 </p><p style="line-height: 1.6;">
 The Zang Lab is well funded by NIH and other agencies. Each postdoctoral scientist in the lab will receive comprehensive and personalized training in research and career development, and will have extensive opportunities for independent and collaborative research. Based at the Center for Public Health Genomics in UVA’s School of Medicine, the lab has established close collaborations with multiple labs both within and outside the university, including departments of Biochemistry and Molecular Genetics, Biomedical Engineering, Statistics, UVA Cancer Center and the new founded School of Data Science, as well as several other universities and research institutes.
 </p><p style="line-height: 1.6;">
@@ -163,16 +163,16 @@ We are recruiting graduate students for research training and completing PhD the
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
 <p style="line-height: 1.6;">
-Undergraduate students at any year are welcome to work in the lab part-time during semesters or full-time in the summer to get research training and research experience. Students majored in physics, mathematics, statistics, computer science or engineering with interests in biomedical research are especially welcome. Please contact Dr. Zang directly.
+Undergraduate students are welcome to join the lab before the Third Year to get research training and research experience. Students majored in physics, mathematics, statistics, computer science or engineering with interests in biomedical research are especially welcome. To complete the training and a research project, undergraduate students are expected to devote two years including at least one full-time summer. Please contact Dr. Zang for details.
 </p><p style="line-height: 1.6;">
 Undergraduate students from outside of UVA are welcome to conduct summer research in the lab. Eligible students are encouraged to apply to the  <a href="https://med.virginia.edu/summer-research-internship-program" target="_blank">Summer Research Internship Program</a> or the <a href="https://www.nsfreu.org/howtoapply/engineering" target="_blank">NSF</a> <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/training-programs/systems-bioengineering-reu" target="_blank">REU Program in Multi-Scale Systems Bioengineering</a>, although opportunities in the lab are not contingent upon admission to the summer programs. Please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> for inquiries.
 </p>
 <hr>
 <h3><font color="#002F6C">Why UVA?</font></h3>
-<p style="line-height: 1.6;">Because this is a great place! For more information about the university and the Charlottesville area, please refer to my colleague and friend <a href="http://databio.org/" target="_blank">Dr. Nathan Sheffield</a>'s <a href="http://databio.org/whyjoin/" target="_blank">article about "Why you should consider coming to UVA"</a>.
+<p style="line-height: 1.6;">Because this is a great place! For more information about the university and the Charlottesville area, please refer to my colleague and friend Nathan's <a href="http://databio.org/whyjoin/" target="_blank">article about "Why you should consider coming to UVA"</a>.
 </p>
 <hr>
-<p align="right">Last modified: November 25, 2020</p>
+<p align="right">Last modified: January 22, 2021</p>
 </div>
 
 </body></html>
