--- a/index.htm
+++ b/index.htm
@@ -147,8 +147,12 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Chongzhi receives a <a href="https://research.virginia.edu/2020-award-winners" target="_blank">UVA Research Excellence Award</a>. 
-		<br><br>
+		Chongzhi receives a <a href="https://research.virginia.edu/2020-award-winners" target="_blank">UVA Research Achievement Award</a>! See the <a href="https://news.virginia.edu/content/uva-honors-distinguished-researchers-virtual-awards-event" target="_blank"><b>news report</b></a> and video below!
+		</p>
+		<p align="left">
+		<iframe width="640" height="360" src="https://www.youtube.com/embed/awn4c1d4SWI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</p>
+		<p>
 		Three new members join the lab: BIMS rotations student Jamel Simpson, postdoctoral associates Qingying Chen and Billy Lamberti! Welcome Jamel, Qingying, and Billy!
 		<br><br>
 		The journal <a href="http://journal.hep.com.cn/qb/EN/2095-4689/current.shtml" target="_blank"><i>Quantitative Biology</i></a> features Chongzhi's <a href="https://doi.org/10.1007/s40484-020-0225-2" target="_blank">recent publication</a> with a <a href="http://journal.hep.com.cn/qb/EN/2095-4689/current.shtml" target="_blank">cover image</a>.
@@ -611,7 +615,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: January 29, 2021</p>
+<p align="right">Last modified: February 1, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
