--- a/index.htm
+++ b/index.htm
@@ -147,7 +147,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Chongzhi receives a <a href="https://research.virginia.edu/2020-award-winners" target="_blank">UVA Research Achievement Award</a>! See the <a href="https://news.virginia.edu/content/uva-honors-distinguished-researchers-virtual-awards-event" target="_blank"><b>news report</b></a> and video below!
+		Chongzhi receives a <a href="https://research.virginia.edu/2020-award-winners" target="_blank">UVA Research Excellence Award</a>! See the <a href="https://news.virginia.edu/content/uva-honors-distinguished-researchers-virtual-awards-event" target="_blank"><b>news report</b></a> and video below!
 		</p>
 		<p align="left">
 		<iframe width="640" height="360" src="https://www.youtube.com/embed/awn4c1d4SWI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
