--- a/people.htm
+++ b/people.htm
@@ -413,6 +413,14 @@ Email: <a href="mailto:ahm5jj@virginia.edu">ahm5jj@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on double-majoring in Biochemistry and Biostatistics with a potential minor in Bioethics. He is interested in the development and application of data science in the medical field, especially how computational methods can be applied to observe multiple health factors such as social, genetic, etc. In his free time, he likes swimming, exploring Charlottesville’s music and food scene and being with friends. He is apart of the Club Swim at UVA, PHIDE (Co-ed Pre-Medical Fraternity) and Student Council.
 </p><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/naomi_luu.jpg" style="width:180px">
+<b>Naomi Luu</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:npl2ku@virginia.edu">npl2ku@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Naomi Luu is an undergraduate student (Class of 2023) from Northern Virginia, majoring in Biology. She is interested in biomedical research, specifically the application and impact of computational methods on the study of human diseases. She is excited to explore how the study of computer science, biology, and statistics intersect. In her free time, she enjoys reading, going to concerts, and hiking. She also volunteers through Madison House and is a member of AMSA, the All Girls Stem Society, and Alpha Epsilon Delta at UVA.
+</p><br><br>
 <h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/kamil_urbanowski.jpg" style="width:180px">
@@ -558,7 +566,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: January 22, 2021</p>
+<p align="right">Last modified: February 5, 2021</p>
 
 </div>
 
