--- a/bartcancer/help/index.html
+++ b/bartcancer/help/index.html
@@ -20,19 +20,15 @@
   </div>
 
   <div id="content">
-    <!--<h1>How to use this site</h1>
-    <p>Back on the home page, you'll find a link to the actual tool. This page has drop down menus for choosing a cancer type and regulation type. Select your cancer and regulation type of 
-        choice and click submit. A table will appear displaying a likelihood table of transcription factors that control the gene expression in that cancer type. Under the table you'll 
-        find a link to download the table in CSV format.</p>-->
+
     <h1>Citations</h1>
       <p>If you use BART Cancer in your data analysis or publish the results of BART Cancer, 
         please cite the following papers in the main text of your manuscript:
         <ol type="1">
-          <li>Wang, Z., Civelek, M., Miller, C. L., Sheffield, N. C., Guertin, M. J., & Zang, C. (2018). BART: A transcription factor prediction tool with query gene sets or epigenomic profiles. <i>Bioinformatics</i>, <b>34</b>(16), 2867-2869.
-            <a href="https://academic.oup.com/bioinformatics/article/34/16/2867/4956015">https://academic.oup.com/bioinformatics/article/34/16/2867/4956015</a></li>
-          <br><li>Mei, S., Meyer, C. A., Zheng, R., Qin, Q., Wu, Q., Jiang, P., Li, B., Shi, X., Wang, B., Fan, J., Shih, C., Brown, M., Zang, C., & Liu, X. S. (2017). Cistrome Cancer: A web resource for integrative gene regulation modeling in cancer. <i>Cancer Research</i>, <b>77</b>(21), e19-e22.
-            <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5826647/">https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5826647/</a></li>
-          
+          <li><a href="https://www.biorxiv.org/content/10.1101/2020.12.17.423327v1">BART Cancer: a web resource for transcriptional regulators in cancer genomes</a><br>
+            Zachary V. Thomas, Zhenjia Wang, Chongzhi Zang <br>
+            <b>bioRxiv</b> 2020.12.17.423327 (2020)
+          </li>
         </ol>
       </p>
     <h1>Manual</h1>
@@ -48,17 +44,17 @@
     <p>The primary BART result is displayed as a table with the following columns:
       <ul>
         <li><b>TR:</b> Name of transcriptonal regulator</li>
-        <li><b>Wilcoxon test statistic:</b> Wilcoxon rank-sum test comparing the set of association score from one TF with all the association scores.
-           The higher the test score is, the more likely the TF regulates the input.</li>
+        <li><b>Wilcoxon test statistic:</b> Wilcoxon rank-sum test comparing the set of association score from one TR with all the association scores.
+           The higher the test score is, the more likely the TR regulates the input.</li>
         <li><b>Wilcoxon P-value:</b> One-sided P-value of the Wilcoxon rank-sum test. 
-          The smaller the p-value is, the more significant the TF regulates the input.</li>
-        <li><b>Z-score:</b> Z-score indicates the deviation of the TF's Wilcoxon test score from its background model, which is generated from MSigDB gene sets and H3K27ac profiles. 
-          The background model contains the Wilcoson test score for each TF and each profile.</li>
-        <li><b>Max AUC:</b> Maximum assocation score of each TF in its datasets indication the specific binding pattern 
-          of on dataset has the highest correlatin with the input.</li>
-        <li><b>Relative Rank:</b> Rank indicating average between Wicoxon P-value, Z-score, and maximum association score 
-          and then dividing the absolute rank by the total number of TFs.</li>
-        <li><b>Irwin-Hall P-value:</b> Indicates the rank significance. Irwin-Hall describes the probability distribution for a random variable define as the sum of a number of 
+          The smaller the p-value is, the more significant the TR regulates the input.</li>
+        <li><b>Z-score:</b> Z-score indicates the deviation of the TR's Wilcoxon test score from its background model, which is generated from MSigDB gene sets and H3K27ac profiles. 
+          The background model contains the Wilcoxon test score for each TR and each profile.</li>
+        <li><b>Max AUC:</b> Maximum association score of each TR in its datasets indication the specific binding pattern 
+          of on dataset has the highest correlation with the input.</li>
+        <li><b>Relative Rank:</b> Rank indicating average between Wilcoxon P-value, Z-score, and maximum association score 
+          and then dividing the absolute rank by the total number of TRs.</li>
+        <li><b>Irwin-Hall P-value:</b> Indicates the rank significance. Irwin-Hall describes the probability distribution for a random variable defined as the sum of a number of 
           independent random variables, each having uniform distribution. The smaller the P-value is, the more significant the rank is.</li>
       </ul>
     </p>
@@ -84,9 +80,14 @@
           Each cancer type is plotted on a 1 - relative rank vs likelihood ratio axis so that the top right quadrant
           contains those cancer types in which the transcriptional regulator ranked high in likelihood and high in BART rank.
           The size of the bubble corresponds to its relative expression level using log(FPKM + 0.1) with the highest rank (1) 
-          being the largest bubble, and the lowest rank (15) being the smallest bubble. </p>
+          being the largest bubble, and the lowest rank (15) being the smallest bubble. An example is shown below (left).</p>
           <p>If the likelihood ratio was not available from Cistrome Cancer, the bubbles were plotted just on the rank axis such that 
-            the higher bubbles correspond to high BART rank. </p></li>
+            the higher bubbles correspond to high BART rank. An example is shown below (right).</p>
+          <div id="twoimages">
+          <img class='img.logo' src="AFF4_scatter.png" style="width:300px;" text-align="center;"> <img src="ADNP_scatter.png" style="width:300px;">
+        </div>
+
+          </li>
           
           <li><b>Expression Level</b><p>This plot displays the distribution of the expression level of each transcriptional regulator 
             in each of the cancer types. These violin plots were generated using the TCGA expression of log(FPKM + 0.1).
@@ -133,40 +134,10 @@
           <img src="vennDiagrams/UCECvennDiagram.png" style="width:405px;height:360px;">
         </div>
   
-  <!--<div id="sidebar">
-    <h3>Css Stuff</h3>
-    <div id="nav-right">
-      <ul>
-        <li><a href="http://all-free-download.com/free-website-templates/">Css Drive</a></li>
-        <li><a href="http://all-free-download.com/free-website-templates/">Dynamic Drive</a></li>
-        <li><a href="http://all-free-download.com/free-website-templates/">Style The Web</a></li>
-        <li><a href="http://all-free-download.com/free-website-templates/">Css Import</a></li>
-        <li><a href="http://all-free-download.com/free-website-templates/">Think Vitamin</a></li>
-      </ul>
-    </div>
-    <h3>Gallery Quick Links</h3>
-    <p class="thumbs"> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a></p>
-    <p class="thumbs"> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a></p>
-    <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, . Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
-    <h3>Recent Updates</h3>
-    <p class="thumbs"> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a></p>
-    <p class="thumbs"> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a> <a href="http://all-free-download.com/free-website-templates/"><img src="imgs/thumb.jpg" width="40" height="40" alt="" /></a></p>
-    <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-  </div>
-   End Side bar and thumbs
--->
-  <!--
-   Start of footer data
--->
 </div>
   <div id="footer-contents">
-    <p id="footer-copy">Chongzhi Zang Lab 2020</p>
+    <p id="footer-copy">Chongzhi Zang Lab 2021</p>
   </div>
-  <!--
-   End of footer data
 
-</div>
-<div align=center>Chongzhi Zang Lab 2020</div>
--->
 </body>
 </html>
