--- a/people.htm
+++ b/people.htm
@@ -231,30 +231,6 @@ Email: <a href="mailto:hz9fq@virginia.edu">hz9fq@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Hongpan Zhang is a research specialist in the lab and will be a PhD student in the Biomedical Sciences (BIMS) program starting 2021. He obtained two bachelor's degrees in life sciences and software engineering from Sichuan University. Hongpan is keen to study the connection between genomic phenomena and diseases. He hopes to raise his knowledge of biological issues in his research work. Hongpan is a basketball fan and also loves other sports events. He's interested in historical knowledge as well.
 </p><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/audrey_putelo.jpg" style="width:180px">
-<b>Audrey Putelo</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:amp9cd@virginia.edu">amp9cd@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Audrey Putelo is a first-year PhD student in the Biomedical Sciences (BIMS) program and is doing her first rotation in the lab during Summer 2020. Audrey received her BS in Biomolecular Sciences from the University of Michigan, Ann Arbor in May of 2020 where she held research positions studying cancer biology and biological chemistry.  She is very excited to continue her scientific endeavors at the University of Virginia and delve into the world of computational biology.
-</p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/jose_verdezoto.jpg" style="width:180px">
-<b>Jose Verdezoto</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:jev4xy@virginia.edu">jev4xy@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Jose Verdezoto is a first-year PhD student in the Biomedical Sciences (BIMS) program doing rotation in the lab. Originally from Quito, Ecuador, he received his BS in Molecular biology and Genetics from the University of Washington, Seattle. After graduation, he worked at the Fred Hutchinson Cancer Research Center for a couple of years investigating the role of nuclear lipid droplets in germline development. In order to start training in computational biology, he moved to Charlottesville and joined the lab of Dr. Nathan Sheffield at the UVA Center for Public Health Genomics. He mostly worked on developing software architecture for hosting of genomic region data as well as analysis of single cell RNA-seq data. During his graduate career, he hopes to study different ways to integrate different types of high-throughput genomics data to understand disease in a more holistic way. During his free time he loves to play/watch tennis, learn about finance and stocks trading, and watch comedy TV shows.
-</p><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/jamel_simpson.jpg" style="width:180px">
-<b>Jamel Simpson</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:jws6pq@virginia.edu">jws6pq@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Jamel Simpson is a first year Ph.D. student in the Biomedical Sciences (BIMS) program doing rotation in the lab. He received his B.S. in Biochemistry from UCLA. He started research in cell biology working with actin nucleator Spire, but has recently pivoted to creating computational tools to uncover the complexity of genetic disease.
-</p><br><br>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
 <h4><font color="#002F6C">Class of 2021</font></h4>
@@ -458,9 +434,19 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 	Current Position: Associate at Wells Fargo<br>
 </li>
 <li>
+	<b>Jamel Simpson</b><br>
+	(01/2021&ndash;02/2021) Rotation PhD Student<br>
+	Current Position: PhD Student in Biomedical Sciences (BIMS), UVA<br>
+</li>
+<li>
 	<b>Wuwei Tan</b><br>
 	(05/2017&ndash;05/2018) Master Student in Statistics<br>
 	Current Position: PhD Student in Electrical and Computer Engineering, Texas A&M University
+</li>
+<li>
+	<b>Jose Verdezoto</b><br>
+	(10/2020&ndash;11/2020) Rotation PhD Student<br>
+	Current Position: PhD Student in Biomedical Sciences (BIMS), UVA<br>
 </li>
 <li>
 	<b>Yifan Zhang</b><br>
@@ -566,7 +552,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: February 5, 2021</p>
+<p align="right">Last modified: February 15, 2021</p>
 
 </div>
 
