--- a/position.htm
+++ b/position.htm
@@ -118,7 +118,7 @@ function myFunction() {
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
-Our lab is seeking to fill <b>three</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methodologies and designing integrative data science approaches to study chromatin epigenomics and gene regulation. Current ongoing projects include: multi-omics integration-based algorithm development for transcriptional regulation prediction; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; statistical and computational modeling of phase-separated transcriptional condensation; global epigenetic and transcriptional regulation in T-cell immunity and various human cancer systems, etc. More information on research directions and previous publications can be found at the <a href="http://faculty.virginia.edu/zanglab">lab website</a>.
+Our lab is seeking to fill <b>three</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methodologies and designing integrative data science approaches to study chromatin epigenomics and gene regulation. Current ongoing projects include: multi-omics integration-based algorithm development for transcriptional regulation prediction; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; statistical and computational modeling of phase-separated transcriptional condensation; global epigenetic and transcriptional regulation in T-cell immunity and various human cancer systems, etc. More information on research directions and previous publications can be found at the <a href="https://zanglab.github.io/">lab website</a>.
 </p><p style="line-height: 1.6;">
 The Zang Lab is well funded by NIH and other agencies. Each postdoctoral scientist in the lab will receive comprehensive and personalized training in research and career development, and will have extensive opportunities for independent and collaborative research. Based at the Center for Public Health Genomics in UVA’s School of Medicine, the lab has established close collaborations with multiple labs both within and outside the university, including departments of Biochemistry and Molecular Genetics, Biomedical Engineering, Statistics, UVA Cancer Center and the new founded School of Data Science, as well as several other universities and research institutes.
 </p><p style="line-height: 1.6;">
@@ -144,14 +144,46 @@ At least one peer-reviewed publication written in English in the previous area o
 </p></li>
 </ol>
 <p style="line-height: 1.6;">
-The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
-</p><p style="line-height: 1.6;">
 <font color="#002F6C"><b>Application Process</b></font>
 </p><p style="line-height: 1.6;">
-To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0013309" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0013309" target="_blank">here</a> <!--or visit <a href="https://jobs.virginia.edu" target="_blank">Jobs@UVa</a> website and search on Posting Number R0013309. Complete a candidate profile, -->
-and submit a complete application in the system. Meanwhile, Interested applicants can send a complete CV and contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc application". The posting will remain open until all positions are filled.
+To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0013309" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0013309" target="_blank">here</a> and submit a complete application in the system. Meanwhile, Interested applicants can send a complete CV and contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc application". The posting will remain open until all positions are filled.
 </p><p style="line-height: 1.6;">
-All positions are restricted and contingent on the continuation of funding.
+All positions are restricted and contingent on the continuation of funding. The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
+</p><p style="line-height: 1.6;">
+For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
+</p>
+<hr>
+<h3><font color="#002F6C">Computational Biologist</font></h3>
+<p style="line-height: 1.6;">
+<font color="#002F6C"><b>Description</b></font>
+</p><p style="line-height: 1.6;">
+Our lab is looking to hire a bioinformatician/computational biology lab specialist. The lab specialist will be responsible for assisting the PI, postdoctoral research associates, and other lab members on multiple ongoing research projects to implement bioinformatics algorithms and to use integrative data science approaches for processing and analyzing bulk and single-cell multi-omics sequencing data for the studies of epigenetics and transcriptional regulation in mammalian model systems. More information on the area of research can be found at the <a href="https://zanglab.github.io/">lab website</a>.
+</p><p style="line-height: 1.6;">
+<font color="#002F6C"><b>Requirements</b></font>
+</p>
+<ol style="padding-left: 18px;">
+<li><p style="line-height: 1.6;">
+Minimum of a <b>bachelor’s degree</b> in <i>bioinformatics, computational biology, computer science, statistics,</i> or a related major. A <b>master’s degree</b> is preferred.
+</p></li>
+<li><p style="line-height: 1.6;">
+At least <b>one year</b> research experience in high-throughput genomics data analysis. 2+ years experience, especially in analyzing single-cell RNA-seq and single-cell ATAC-seq data, is preferred. Peer-reviewed publication record is a plus.
+</p></li>
+<li><p style="line-height: 1.6;">
+Proficient in <i>Python</i> and <i>R</i> programming. Experience in database and software development is a plus.
+</p></li>
+<li><p style="line-height: 1.6;">
+Working knowledge of molecular biology and genomics.
+</p></li>
+<li><p style="line-height: 1.6;">
+Excellent academic communication skills and teamwork skills.
+</p></li>
+</ol>
+<p style="line-height: 1.6;">
+<font color="#002F6C"><b>Application Process</b></font>
+</p><p style="line-height: 1.6;">
+To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Computational-Biology-Lab-Specialist_R0021340" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Computational-Biology-Lab-Specialist_R0021340" target="_blank">here</a> and submit a complete application in the system. Meanwhile, Interested applicants can send a complete CV and contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Computational biologist application". The position will remain open until filled.
+</p><p style="line-height: 1.6;">
+All positions are restricted and contingent on the continuation of funding. The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
 </p><p style="line-height: 1.6;">
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
@@ -172,7 +204,7 @@ Undergraduate students from outside of UVA are welcome to conduct summer researc
 <p style="line-height: 1.6;">Because this is a great place! For more information about the university and the Charlottesville area, please refer to my colleague and friend Nathan's <a href="http://databio.org/whyjoin/" target="_blank">article about "Why you should consider coming to UVA"</a>.
 </p>
 <hr>
-<p align="right">Last modified: January 22, 2021</p>
+<p align="right">Last modified: February 16, 2021</p>
 </div>
 
 </body></html>
